# modelling_complex

./: .gitmodules  CMakeLists.txt  README.md
app/: CMakeLists.txt  appcore.cpp  appcore.h  main.cpp  pluginmanager.cpp  pluginmanager.h  scenemanager.cpp  scenemanager.h
app/qml/: main.qml  qml.qrc
app/qml/common/: ButtonToPage.qml  Line.qml
app/qml/components/: ArrayComponent.qml  NumberComponent.qml  PropertyResolver.qml
app/qml/pages/: LoadPluginsPage.qml  PlotPage.qml  PluginPage.qml
example_model_1/: CMakeLists.txt  example_model_1_plugin.cpp  example_model_1_plugin.h  model1.cpp  model1.h  qmldir
example_model_2/: CMakeLists.txt  example_model_2_plugin.cpp  example_model_2_plugin.h  model2.cpp  model2.h  qmldir
plugincore/: CMakeLists.txt  abstractmodel.cpp  abstractmodel.h  abstractplugininterface.cpp  abstractplugininterface.h  common.h  plugincore_global.h
